gateway/gateway-old.yml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  labels:
    app: srjm
  name: srjm-gateway-nginx
  namespace: qrcode-system
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  gatewayClassName: nginx
  listeners:
  - name: http
    hostname: geradorqrcode-srjm.uk
    port: 80
    protocol: HTTP
  - name: https
    hostname: geradorqrcode-srjm.uk
    port: 443
    protocol: HTTPS
    tls:
      mode: Terminate
      certificateRefs:
      - name: geradorqrcode-srjm.uk-tls
